--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,13 @@
         android:theme="@style/Theme.Fingerprint"
         tools:targetApi="31">
         <activity
+            android:name=".PinInputActivity"
+            android:exported="false" />
+        <activity
+            android:name=".HomeActivity"
+            android:exported="false"
+            android:label="@string/title_activity_home" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
